Oct Update Crystal Work

--- a/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_domed_colonies_l_english.yml
@@ -83,7 +83,7 @@
  pd_moon_base_admin_desc: "Government offices and bureaucratic agencies fill this advanced network of protective domes. Linked to its parent planet, this domed base relies on the crucial connection to the nearby habitable world for supplies and maintenance."
  pd_moon_base_priest: "Ecclesiastical Moon Outpost"
  pd_moon_base_priest_desc: "Temples and shrines occupy this advanced network of protective domes, distinguishing it as a spiritual center for the faithful. This domed base is bound to its parent planet and depends on the sacred connection to the nearby habitable world."
- pd_domed_base_research: "Research  Base"
+ pd_domed_base_research: "Research Planetary Outpost"
  pd_domed_base_research_desc: "Laboratories and research facilities dominate this advanced network of protective domes. It is tethered to planets within the solar system and depends on that link for essential resources."
  pd_domed_base_mining: "Mining Planetary Outpost"
  pd_domed_base_mining_desc: "Mines and extraction facilities are the backbone of this advanced network of protective domes. It is anchored to planets within the solar system, relying on this connection to supply essential resources and ship mined materials."
