--- a/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
+++ b/planetary_diversity/localisation/english/planetarydiversity_planet_modifiers_l_english.yml
@@ -203,11 +203,11 @@
 
 ###Tidally Locked
  pd_wet_tidally_locked: "Sunside World"
- pd_wet_tidally_locked_desc: "This humid, tidally locked world presents abundant energy opportunities with constant sunlight and strong winds. The habitable zone is limited to the twilight regions."
+ pd_wet_tidally_locked_desc: "This humid, tidally locked world presents abundant energy opportunities with constant sunlight and strong winds. The planet's temperature and stable hydrosphere allow for rich biodiversity in its dayside and twilight zones."
  pd_dry_tidally_locked: "Twilight World"
  pd_dry_tidally_locked_desc: "This dry, tidally locked world presents abundant energy opportunities with constant sunlight and strong winds. The habitable zone is limited to the twilight regions."
  pd_cold_tidally_locked: "Eyeball World"
- pd_cold_tidally_locked_desc: "This cold, tidally locked world presents abundant energy opportunities with constant sunlight and strong winds. The habitable zone is limited to the twilight regions."
+ pd_cold_tidally_locked_desc: "This cold, tidally locked world presents abundant energy opportunities with constant sunlight and strong winds. The habitable zone is limited to the dayside regions."
  pd_gaia_tidally_locked: "Gaia Tidally Locked World"
  pd_gaia_tidally_locked_desc: "An ideally created tidally locked world has a nitrogen-oxygen atmosphere and a resilient ecosystem. Optimal conditions for all known higher exist in the limited habitable twilight regions."
  pd_arcology_tidally_locked: "Tidally Locked Arcology"
