--- a/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
+++ b/planetary_diversity_uniques/localisation/english/pd_uniques_l_english.yml
@@ -79,30 +79,75 @@
 
 ###Crystal World
  sr_acean:0 "Acean Crystal"
- sr_acean_desc:0 "This crystal's unique resonance promotes remarkable health regeneration in organic lifeforms and accelerates mineral growth."
+ sr_acean_desc:0 "This crystal's unique resonance enhances health regeneration and growth in organic lifeforms."
  mod_planet_miners_sr_acean_produces_add: "£sr_acean£ $sr_acean$ from £job_miner£ [GetMinerPlural]"
  pd_crystal: "Crystal World"
- pd_crystal_desc: "TODO"
+ pd_crystal_desc: "The planet is covered in large Acean Crystal pillars, whose unique resonance enhances health regeneration and growth in organic lifeforms."
+ pd_dead_crystal: "Dead Crystal World"
+ pd_dead_crystal_desc: "The superorganism that created the Acean Crystal has been killed, ending its positive effects on organic life. However, crystal mining is now far more productive."
+ pd_living_crystal: "Restored Crystal World"
+ pd_living_crystal_desc: "The superorganism has been restored, enhancing its positive effects on organic life. Crystal mining has improved, but the creature now feeds on any life it can capture."
  pc_pd_crystal: "Crystal World"
- pc_pd_crystal_desc: "TODO"
+ pc_pd_crystal_desc: "$pd_crystal_desc$"
  pc_pd_crystal_adj: "crystaline"
  mod_pc_pd_crystal_habitability: "Crystal Habitability"
  trait_pc_pd_crystal_preference: "Crystal Preference"
  trait_pc_pd_crystal_preference_desc: "$trait_pc_arctic_preference_desc$"
+ d_pd_khel_ruins: "Khel Ruins"
+ d_pd_khel_ruins_desc: "The remains of a failed colony, including giant borehole research facilities, litter a section of this planet."
+ d_pd_acean_pillars: "Acean Pillars"
+ d_pd_acean_pillars_desc: "This planet is covered in large Acean Crystal pillars, which, while connected to the planet, profoundly affect nearby organic life, calming emotions and boosting fertility."
 
  #Events
  pdcrystal.100.name: "Gem of Life"
- pdcrystal.100.desc: "A deep scan of §Y[From.GetName]§! revealed something extraordinary: towering crystal formations scattered across the landscape, which we designated §YAcean Crystal§!. These gemstones seem to enhance the health of nearby organic life, and remarkably, their effects persist even in isolated samples.\n\n§Y[Root.GetLeaderName]§! also discovered a decaying alien outpost in the jungle, marking the area as ripe for archaeological investigation."
+ pdcrystal.100.desc: "A deep scan of §Y[From.GetName]§! revealed something extraordinary: towering crystal formations scattered across the landscape, which we designated §YAcean Crystal§!. These gemstones seem to enhance the health of nearby organic life, and remarkably, their effects persist even in isolated samples.\n\n§Y[Root.GetLeaderName]§! also discovered signs of an outpost in the jungle, if we can hold the planet we will be able to explore the ruins."
  pdcrystal.100.a: "Amazing."
+ pdcrystal.200.name: "Ruins in the Jungle"
+ pdcrystal.200.desc: "As our colony establishes itself on §Y[Root.GetName]§!, we have discovered that the ruins found by our initial were by no means the only one. Several deserted camps, silent and weather-worn, can be found scattered across the surrounding wilderness.\n\nWho these early inhabitants were and what became of them remains unclear."
+ pdcrystal.200.a: "We will explore these ruins."
+ pdcrystal.300.name: "The Fate of the Planet"
+ pdcrystal.300.desc: "We now know the Khels' fate and the dark secret of the Acean Crystal. We have three options: leave the superorganism as it is, kill it, or heal it to its original state.\n\nKilling it would increase crystal mining but end its effects on organic life. Restoring it would enhance its impact on life but increase the risk of colonist deaths, though safety measures could help mitigate this."
+ pdcrystal.300.a: "It was lobotomized for a reason."
+ pdcrystal.300.a.tooltip: "We will leave the superorganism untouched, changing nothing in how we interact with the planet."
+ pdcrystal.300.b: "We'll end this creatures life."
+ pdcrystal.300.b.tooltip: "We will finish what the Khel started and kill the superorganism. This will end the planet's effects on organic life but significantly increase Acean mining production."
+ pdcrystal.300.c: "We should undo this unjust crime."
+ pdcrystal.300.c.tooltip: "Reversing the Khel's lobotomy will restore the superorganism, enhancing its effects on life and slightly boosting Acean mining, but it will also resume feeding on living creatures, including colonists."
+
+ #Archaeology Site
+ pdcrystal_site: "The Overgrown Ruins"
+ pdcrystal_site_desc: "One region of the planet is scattered with abandoned ruins. A thorough investigation might help us understand the Acean Crystal deposits unique to this world and their remarkable influence over the development of organic life."
+ pdcrystal.250.name: "The Khel Ruins"
+ pdcrystal.250.desc: "The jungle has overtaken much of the decaying bases and their technology, but we recovered some helpful information. The Khels, an alien species not native to this world, were conducting a planet-wide experiment involving deep boreholes into the crust.\n\nAlthough most data was corrupted, we found clues indicating a large undiscovered Khel settlement near our research post."
+ pdcrystal.250.a: "Interesting."
+ pdcrystal.251.desc: "At the settlement, we found the remains of a generation ship which lacked hyperspace technology. The Khels, fleeing a climate disaster on their homeworld, wandered through several systems for generations. They eventually found this planet, which seemed to meet all their needs, and began building a new home.\n\nWe will continue to shift through the Khel records."
+ ancrel.251.a: "How fortunate for them."
+ pdcrystal.252.desc: "The colony thrived for several years, aided by crystal pillars that enhanced their transplanted crops. But then, colonists began disappearing. At first, it seemed random, but the rate increased. In investigating the disappearances, their lead scientist made a shocking discovery: the planet was alive and feeding on them. With no way to relaunch their ship, they focused on communicating with and pacifying the planet.\n\nWe will begin to explore one of the borehole locations next."
+ pdcrystal.252.a: "Is the colony at risk?"
+ pdcrystal.253.desc: "The study revealed that the crystal is a lithoid superorganism with rudimentary intelligence, using the Acean to lure animals into hidden sinkholes. The Khels drilled boreholes and an electromagnetic pulse to disrupt its feeding while preserving the crystal's properties.\n\nWe have also uncovered the control center for the borehole project."
+ pdcrystal.253.a: "How desperate they must have been."
+ pdcrystal.254.desc: "The Khel's boreholes only hastened the planet's feeding, perhaps as a defense mechanism. By the time they were ready to fire their weapon, only a few dozen Khel remained. After the detonation, the planet released a massive surge of energy, and all records from the Khel abruptly ceased.\n\nThough the Khels didn't survive to witness it, they were correct: the planet had lost its ability to feed one life. This is the grim source of the Acean crystal's powers."
+ pdcrystal.254.a: "What a grim end for everyone."
 
  #Origin
  pd_origin_init_crystal_NAME:0 "Crystal System"
  pd_origin_init_crystal_DESC:0 "A starting system containing the Crsytal World"
  origin_pd_crystal_world:0 "Crystalborn"
  origin_pd_crystal_world_desc:0 "This civilization emerged on a verdant world dominated by towering crystal pillars formed from the rare Acean Crystal."
- origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Size: £planetsize£ 25)$TABBED_NEW_LINE$- ['concept_pd_crystal'] Planet Modifier$TABBED_NEW_LINE$- TODO Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO"
+ origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Size: £planetsize£ 25)$TABBED_NEW_LINE$- ['concept_pd_crystal'] Planet Modifier$TABBED_NEW_LINE$- TODO Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO"
  concept_pd_crystal: "$pd_crystal$"
  concept_pd_crystal_desc: "- $MOD_PLANET_MAX_DISTRICTS_ADD$: §G10§!\n- $mod_planet_districts_upkeep_mult$: §R25%§!\n- $mod_planet_buildings_upkeep_mult$: §R25%§!"
+
+ #Technology
+ tech_acean_research: "Acean Crytal Processing"
+ tech_acean_research_desc: "Mastering how to retain the Acean Crystal's powerful effects after harvest is no small feat and will take time to fully understand."
+ tech_acean_research_tt_desc: "§HUnlocks:§! Acean Mining\n§HUnlocks:§! Acean Edicts"
+
+ #Edicts
+ edict_acean_pop_growth: "Acean Urban Infrastructure"
+ edict_acean_pop_growth_desc: "Acean Crystals integrated into the city's infrastructure enhance well-being, with streets and spaces designed to maximize Acean's positive effects on physical and emotional health."
+ edict_acean_shield_resonance: "Acean Shield Resonance"
+ edict_acean_shield_resonance_desc: "The unique resonance frequency of Acean Crystals can be applied to our shield generators, greatly improving their strength and regeneration."
 
 
 
