--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_ascension_worlds_l_simp_chinese.yml
@@ -36,7 +36,7 @@
  pd_aw_wasteland_planet_tooltip: "解锁£district£ §Y发电区划§!和§Y采矿区划§!\n禁用所有§Y农业区划§!"
  MESSAGE_PD_WASTELAND_DESC:1 "$PLANET|Y$现在拥有§Y$decision_pd_wasteland_planet$§!"
  MESSAGE_PD_WASTELAND_MESSAGE_TYPE_TITLE: "已废除环境法规"
- MESSAGE_PD_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$的生态系统修复完成。"
+ MESSAGE_PD_WASTELAND_CLEANUP_DESC:1 "$PLANET|Y$的生态系统已经修复完成。"
  MESSAGE_PD_WASTELAND_CLEANUP_MESSAGE_TYPE_TITLE: "重新采纳环境法规"
  decision_pd_shroud_planet: "虚境相变"
  decision_pd_shroud_planet_desc: "我们可以削弱该星球与虚境的分界，在物质世界和灵能世界之间建立平衡。"
