--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_engine_events_l_simp_chinese.yml
@@ -90,7 +90,7 @@
  pdengine.24.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.24.dry_gaia: "$pc_pd_dry_gaia$"
  pdengine.24.cold_gaia: "$pc_pd_cold_gaia$"
- pdengine.90.name: "$civic_life_seeded$生物群系"
+ pdengine.90.name: "$civic_life_seeded$生态构成"
  pdengine.90.desc: "这颗名为§Y[Capital_scope.GetName]§!的星球，乃是我们发端的乐土。我们母星的生态环境是什么样子？"
  pdengine.90.wet_gaia: "$pc_pd_wet_gaia$"
  pdengine.90.dry_gaia: "$pc_pd_dry_gaia$"
