--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_classes_l_simp_chinese.yml
@@ -41,7 +41,7 @@
  mod_pc_pd_petrified_habitability: "陆地星球宜居性"
  trait_pc_pd_petrified_preference: "陆地星球偏好"
  trait_pc_pd_petrified_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora: "巨植物星球"
+ pc_pd_megaflora: "巨树星球"
  pc_pd_megaflora_desc: "潮汐锁定的岩质星球，拥有氮氧大气。森林茂密，水圈强力而健康。这颗星球是覆盖其表面的巨型植物的家园。"
  pc_pd_megaflora_adj: "森林"
  mod_pc_pd_megaflora_habitability: "陆地星球宜居性"
@@ -60,7 +60,7 @@
  trait_pc_pd_cascadian_preference: "海洋星球偏好"
  trait_pc_pd_cascadian_preference_desc: "$trait_pc_arctic_preference_desc$"
  pc_pd_swamp: "湿地星球"
- pc_pd_swamp_desc: "湿润多雨的星球，拥有氮氧大气。星球上大部分地区都覆盖着林木茂盛的湿地，地表极少有没有陷入水面下的地方。水圈强大而稳定，主要由浅海、湿地和沼泽构成，养育着丰富的动植物生命。"
+ pc_pd_swamp_desc: "湿润多雨的星球，拥有氮氧大气。星球上大部分地区都覆盖着林木茂盛的湿地，地表极少有没有没入水面下的地方。水圈强大而稳定，主要由浅海、湿地和沼泽构成，养育着丰富的动植物生命。"
  pc_pd_swamp_adj: "沼泽"
  mod_pc_pd_swamp_habitability: "海洋星球宜居性"
  trait_pc_pd_swamp_preference: "海洋星球偏好"
@@ -83,7 +83,7 @@
  mod_pc_pd_kelp_habitability: "海洋星球宜居性"
  trait_pc_pd_kelp_preference: "海洋星球偏好"
  trait_pc_pd_kelp_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_algae: "粉藻星球"
+ pc_pd_algae: "粉藻华星球"
  pc_pd_algae_desc: "拥有氮氧大气和丰富水体的岩石星球。该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
  pc_pd_algae_adj: "粉色"
  mod_pc_pd_algae_habitability: "海洋星球宜居性"
@@ -107,7 +107,7 @@
  mod_pc_pd_atoll_habitability: "热带星球宜居性"
  trait_pc_pd_atoll_preference: "热带星球偏好"
  trait_pc_pd_atoll_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_tepui: "高原莽丛星球"
+ pc_pd_tepui: "莽丛台地星球"
  pc_pd_tepui_desc: "拥有氮氧大气层的岩石星球，山地遍布，草木葱郁。该星球拥有规模巨大的水圈，地表存在非常繁盛的植物群落，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
  pc_pd_tepui_adj: "山地"
  mod_pc_pd_tepui_habitability: "热带星球宜居性"
@@ -131,7 +131,7 @@
  mod_pc_pd_fungal_habitability: "热带星球宜居性"
  trait_pc_pd_fungal_preference: "热带星球偏好"
  trait_pc_pd_fungal_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_aerial: "浮种星球"
+ pc_pd_aerial: "浮荚星球"
  pc_pd_aerial_desc: "一类拥有致密氮氧大气的湿润岩石星球，降水量显著。独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
  pc_pd_aerial_adj: "漂浮"
  mod_pc_pd_aerial_habitability: "热带星球宜居性"
@@ -197,7 +197,7 @@
  mod_pc_pd_aquifer_habitability: "沙漠星球宜居性"
  trait_pc_pd_aquifer_preference: "沙漠星球偏好"
  trait_pc_pd_aquifer_preference_desc: "$trait_pc_arctic_preference_desc$"
- pc_pd_mesa: "台地星球"
+ pc_pd_mesa: "干燥台地星球"
  pc_pd_mesa_desc: "炎热、干燥的岩石星球，拥有氮氧大气层。巨大的高原和平顶山地貌在赤道地区随处可见，而极地地区则森林密布，更为凉爽。主要的水体是那些被刀削般的峭壁拱卫，河床上植物繁茂的大河。"
  pc_pd_mesa_adj: "干旱"
  mod_pc_pd_mesa_habitability: "干旱星球宜居性"
@@ -478,7 +478,7 @@
  pc_pd_nuked_superhabitable: "超级类地星球（死寂）"
  pc_pd_nuked_superhabitable_desc: "这一超级类地星球是拥有氮氧大气的岩石星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面鲜有生命迹象，强重力环境对于不适应者会是一种折磨。"
  pc_pd_wet_tidally_locked: "潮汐锁定星球（湿润）"
- pc_pd_wet_tidally_locked_desc: "这一潮汐锁定行星是湿润的岩石星球，拥有致密的氮氧大气。这里的温度与稳定的水圈，使得昼半球与黄昏地带蕴藏着丰富的生物多样性。"
+ pc_pd_wet_tidally_locked_desc: "这一潮汐锁定行星是湿润的岩石星球，拥有致密的氮氧大气。温度与稳定水圈使得白昼区与暮光区都蕴藏着丰富的生物多样性。"
  pc_pd_wet_tidally_locked_adj: "潮汐锁定"
  mod_pc_pd_wet_tidally_locked_habitability: "潮汐锁定星球宜居性（湿润）"
  trait_pc_pd_wet_tidally_locked_preference: "潮汐锁定星球偏好（湿润）"
@@ -582,7 +582,7 @@
  pd_tooltip_culture: "提供更多£mod_job_culture_worker_add£ §Y$job_culture_worker_plural$§!岗位"
  pd_researcher_ending: "§Y研究点数§!（£job_researcher£ $job_researcher_plural$产出）"
  rare_building_warning: "可以建造以下三类建筑："
- pc_pd_megaflora_tooltip: "§Y巨木星球§!是一种['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—建筑与区划的花费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
+ pc_pd_megaflora_tooltip: "§Y巨树星球§!是一种['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+2§!\n—£district£ §Y$district_generator_plural$§!：§G+2§!\n—建筑与区划的花费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_energy$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_petrified_tooltip: "§Y木化石星球§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_reef_tooltip: "§Y$pc_pd_reef$§!是一类['concept_pd_rares']\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—住房：§R-10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_minerals$\n$t$—$pd_tooltip_consumer_goods$\n$t$—£society£ £engineering£ $pd_researcher_ending$"
  pc_pd_archipelago_tooltip: "§Y$pc_pd_archipelago$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—建筑和区划花费：§R+10%§!\n—建筑和区划维护费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_alloys$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_culture$"
@@ -602,11 +602,11 @@
  pc_pd_lichen_tooltip: "§Y$pc_pd_lichen$§!是一类['concept_pd_rares']\n—£district£ §Y$district_farming_plural$§!：§G+6§!\n—£district£ §Y$district_mining_plural$§!：§R-2§!\n—宜居度：§G+10%§!\n—建筑和区划维护费：§R+20%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_energy$\n$t$—£society£ $pd_researcher_ending$"
  concept_pd_uncommon: "稀少星球"
  concept_pd_uncommons: "稀少星球"
- concept_pd_uncommons_desc: "—相较于常规星球，其宜居度更低\n—自然生成概率很低\n—有专门对应的改造候选星球\n—有特殊星球修正\n—有一些会随科技进行升级的建筑\n—确保宜居星球会变更为改造候选星球"
- pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—拥有§G31-35§!的星球规模\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居度：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
- pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—区划上线：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—£physics£ £society£ $pd_researcher_ending$"
- pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为另一种§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—£engineering£ $pd_researcher_ending$"
- pc_nuked_relic: "死寂遗落星球"
+ concept_pd_uncommons_desc: "—相较于常规星球，其宜居性更低\n—生成概率很低\n—有专门对应的改造候选星球\n—有特殊星球修正\n—有一些会随科技而升级的建筑\n—确保宜居星球会变更为改造候选星球"
+ pc_pd_superhabitable_tooltip: "§Y超级类地星球§!是一类['concept_pd_uncommons']\n—星球规模介于§G31至35之间§!\n—会提供对应其他§Y超级类地星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y超级类地星球§!\n—£district£ §Y$district_farming_plural$§!：§G+4§!\n—人口增长速度：§G+10%§!\n—建筑和区划花费：§R+25%§!\n—宜居性：§R-20%§!\n—$rare_building_warning$\n$t$—£society£ $pd_researcher_ending$\n$t$—$pd_tooltip_food$\n$t$—$pd_tooltip_alloys$"
+ pc_pd_tidally_locked_tooltip: "§Y超级锁定星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y潮汐锁定星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y潮汐锁定星球§!\n—£district£ §Y$district_generator_plural$§!：§G+4§!\n—最大区划数：§R-30%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_food$\n$t$—£physics£ £society£ $pd_researcher_ending$"
+ pc_pd_cave_tooltip: "§Y岩洞星球§!是一类['concept_pd_uncommons']\n—会提供对应其他§Y岩洞星球§!的宜居性增益\n—只能§Y改造§!为其他类型的§Y岩洞星球§!\n—£district£ §Y$district_mining_plural$§!：§G+4§!\n—轨道轰炸伤害：§G-30%§!\n—岩石人口增长速度：§G+10%§!\n—生物人口增长速度：§R-10%§!\n—建筑和区划花费：§R+10%§!\n—$rare_building_warning$\n$t$—$pd_tooltip_energy$\n$t$—$pd_tooltip_minerals$\n$t$—£engineering£ $pd_researcher_ending$"
+ pc_nuked_relic: "遗落星球（死寂）"
  pc_nuked_relic_desc: "这个星球表面曾经被完全被单一城市所覆盖。如今这里只有废弃的古老遗迹，其原住民早已离去。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。地表和洞穴体系中辐射水平高。鲜有生命迹象表面。"
  pc_pd_dry_gaia: "盖亚星球（干燥）"
  pc_pd_dry_gaia_desc: "这是气候干燥的理想世界，拥有氮氧大气层和可以自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。"
