--- a/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
+++ b/planetary_diversity/localisation/simp_chinese/planetarydiversity_planet_modifiers_l_simp_chinese.yml
@@ -15,10 +15,10 @@
  pd_temperate_desc: "这个世界气候温和，几乎每一块陆地都有丰富的生物多样性。"
  pd_sakura: "樱花世界"
  pd_sakura_desc: "大陆被海洋分隔，茂密而绚丽的花树森林覆盖着大地。"
- pd_megaflora: "巨木世界"
- pd_megaflora_desc: "巨木覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
+ pd_megaflora: "巨树世界"
+ pd_megaflora_desc: "巨树覆盖了星球地表，其庞大的根底向下延伸有数英里之深。在此类罕见植物周围进行建设成为了一项富有挑战的任务。"
  pd_petrified: "木化石世界"
- pd_petrified_desc: "这里曾经覆盖着分布广泛的巨木，形成了如今的巨大化石遗存。这些奇特的类木材料可以用于建筑用途，尽管要花费相当的投入才能将之开采出来。"
+ pd_petrified_desc: "这里曾经覆盖着分布广泛的巨树，形成了如今的巨大化石遗存。这些奇特的类木材料可以用于建筑用途，尽管要花费相当的投入才能将之开采出来。"
  pd_ocean: "海洋世界"
  pd_ocean_desc: "海洋覆盖了§Y90%§!以上的表面，剩下的陆地均为岛屿。"
  pd_cascadian: "海洋雨林世界"
@@ -31,7 +31,7 @@
  pd_fog_desc: "海水覆盖大部分地表，环境中湿度极高，因而陆地上空常年云雾弥漫，支持着内陆的繁茂森林和广阔草原。"
  pd_kelp: "巨藻世界"
  pd_kelp_desc: "海洋覆盖了此星球的大部分地表，富饶的浅海孕育出广袤的巨藻林。这一水下生态系统生机勃勃，支撑着星球表面引人注目的丰富生命形态。"
- pd_algae: "粉藻世界"
+ pd_algae: "粉藻华世界"
  pd_algae_desc: "该星球上众多浅海和湖泊供养着绚丽的粉色藻华，这番壮丽之景在太空中也能看得一清二楚。"
  pd_reef: "珊瑚礁世界"
  pd_reef_desc: "星球表面都是浅海，从轨道上可以看到水面下的巨大礁脉体系。礁脉高出水面形成了珊瑚岛链。"
@@ -41,7 +41,7 @@
  pd_tropical_desc: "气候变化巨大，旱季和雨季交替明显。绝大部分大陆上都覆盖着茂盛的植被。"
  pd_atoll: "环礁世界"
  pd_atoll_desc: "丰富的浅潟湖、复杂的珊瑚礁、植被繁茂的热带群岛是此地的主要环境。宜人的温度孕育出繁盛的生物圈。"
- pd_tepui: "高原莽丛世界"
+ pd_tepui: "莽丛台地世界"
  pd_tepui_desc: "该星球拥有规模巨大的水圈，地表植物繁茂，高低海拔环境迥异。在峻峭的台地高原上，气温较为凉爽，降雨丰沛；地势较低的地方则更加温暖、潮湿，发育出繁茂的丛林。"
  pd_mangrove: "红树林世界"
  pd_mangrove_desc: "大部分区域被浅海覆盖，几乎没有高出海平面的陆地。从现有的少数岛屿的海岸地带开始，丛林可以向海洋绵延数百英里。"
@@ -49,7 +49,7 @@
  pd_cenote_desc: "稀疏的热带森林覆盖着地表，大部分水体都被滤进复杂的地下系统中，滋养着互相关联的生态系统和丰富多样的生物。"
  pd_fungal: "蕈菌丛林世界"
  pd_fungal_desc: "蕈基植被构成了繁盛的生物圈的基础，从微小的刨子到参天巨菇，生命形态丰富多样。"
- pd_aerial: "浮种世界"
+ pd_aerial: "浮荚世界"
  pd_aerial_desc: "独特的植物孕育出巨大的种荚，如云般飘荡在植被繁茂的陆地上空。"
  pd_lilypad: "睡莲世界"
  pd_lilypad_desc: "星球上温暖的浅海供养着丰富多样的生命。水生植物强韧的叶片构成了地表的次级生态系统。"
@@ -75,7 +75,7 @@
  pd_aquifer_desc: "尽管沙子无法疏解酷热，不断移动的泄湖和地下水系，却承载着奇特的生态系统和丰富多样的生命形式。"
  pd_arid: "干旱世界"
  pd_arid_desc: "沙尘飞扬的星球表面多是峭壁和峡谷。植被稀少，但是极地地区森林繁茂。"
- pd_mesa: "台地世界"
+ pd_mesa: "干燥台地世界"
  pd_mesa_desc: "赤道高原和极地森林是这里的主要环境。主要的水体是峭壁间的大河，河床上植物繁茂，景观各异。"
  pd_fog_desert: "雾漠世界"
  pd_fog_desert_desc: "海拔极高的山峰导致了大部分地区都存在的雨影现象，盐坪和干谷是高原地区的普遍地貌。水体主要是一些湖泊和山泉。"
@@ -138,11 +138,11 @@
  pd_boreal: "亚寒带世界"
  pd_boreal_desc: "星球气候为副极地类型，全年温差巨大。寒带针叶林遍布于较为温暖的中低纬度地区，极地地区的环境则是苔原和冰川。"
  pd_snow: "霜雪世界"
- pd_snow_desc: "此星球正在经历严峻的冰期；中高纬度地区皆被冰川覆盖，而赤道附近拥有繁茂的温带森林。"
+ pd_snow_desc: "此星球正在经历严峻的冰期。中高纬度地区皆被冰川覆盖，而赤道附近拥有繁茂的温带森林。"
  pd_highland: "高原世界"
  pd_highland_desc: "持续的降水和缭绕的云雾乃是常态。水体分布较为稳定，主要是山川冰雪和庞大的内陆海，供养着生命力顽强的杂草和苔藓。"
  pd_dune_forest: "森林沙丘世界"
- pd_dune_forest_desc: "这里雾气丰沛，不过降水较少；低地都是干燥的沙丘，山上则森林茂密、白雪皑皑。"
+ pd_dune_forest_desc: "这里雾气丰沛，不过降水较少。低地都是干燥的沙丘，山上则森林茂密、白雪皑皑。"
  pd_fjord: "峡湾世界"
  pd_fjord_desc: "巨大的海洋深深嵌入陆地之中，孕育出沿海的副极地玉林和高海拔地区的山地草原。"
  pd_blossom: "花簇世界"
@@ -152,7 +152,7 @@
  pd_lanthanide: "镧星"
  pd_lanthanide_desc: "稀土金属和地磁活动塑造出令人惊叹的环状山顶。此地几乎没有季节变化，水源勉强可以维持一些耐寒植被。"
  pd_tundra: "苔原世界"
- pd_tundra_desc: "此地拥有稳定的水体与平稳的低温；在险峻的山岭和冰川之间生长着大量地衣。"
+ pd_tundra_desc: "此地拥有稳定的水体与平稳的低温。在险峻的山岭和冰川之间生长着大量地衣。"
  pd_bog: "沼泽世界"
  pd_bog_desc: "此地的夏季湿润而短暂，冬季寒冷而漫长，全年的降水量相当可观。陆地上密集的沼泽构成了强健的水体。"
  pd_mycelium: "蕈菌冻原世界"
@@ -166,7 +166,7 @@
  pd_cryoflora: "冰雪植物世界"
  pd_cryoflora_desc: "气温经常低至冰点以下，水主要以冰雪的形式存在。尽管如此，此地的动植物却演化出抗冻蛋白，因而发展出富有生机和活力的生态系统。"
  pd_lichen: "地衣世界"
- pd_lichen_desc: "此地拥有稳定的水体与平稳的低温；在险峻的山岭和冰川之间生长着地衣林，它们从矿物中吸收无机质作为养分。"
+ pd_lichen_desc: "此地拥有稳定的水体与平稳的低温。在险峻的山岭和冰川之间生长着地衣林，它们从矿物中吸收无机质作为养分。"
  pd_wet_superhabitable: "超级类地世界（湿润）"
  pd_wet_superhabitable_desc: "这颗超级类地星球上有着强健的水圈和理想的农业条件。其平均气温较为温暖，有着地势较浅的海洋盆地。不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_dry_superhabitable: "超级类地世界（干燥）"
@@ -179,23 +179,23 @@
  pd_arcology_superhabitable_desc: "这颗超级类地星球整体都被都市与工业集群覆盖。其平均气温较为温暖，不过，这里对于不适应强重力环境的生物会是一种折磨。"
  pd_nuked_superhabitable: "超级类地世界（死寂）"
  pd_nuked_superhabitable_desc: "一颗大气中充斥着氮氧元素的超级类地星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。对于不适应强重力环境的生物会是一种折磨。"
- pd_wet_tidally_locked: "白昼世界"
- pd_wet_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
- pd_dry_tidally_locked: "昏光世界"
- pd_dry_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
- pd_cold_tidally_locked: "冰洋世界"
- pd_cold_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风有着广阔的发电前景。暮光区是仅有的宜居地带。"
+ pd_wet_tidally_locked: "白昼世界（潮汐锁定·湿润）"
+ pd_wet_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风带来了广阔的发电前景。温度与稳定水圈使得白昼区与暮光区都蕴藏着丰富的生物多样性。"
+ pd_dry_tidally_locked: "暮光世界（潮汐锁定·干燥）"
+ pd_dry_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风带来了广阔的发电前景。宜居区域都位于暮光区中。"
+ pd_cold_tidally_locked: "冰洋世界（潮汐锁定·寒冷）"
+ pd_cold_tidally_locked_desc: "这颗潮汐锁定星球的恒久光照和狂风带来了广阔的发电前景。宜居区域都位于白昼区中。"
  pd_gaia_tidally_locked: "潮汐锁定世界（盖亚）"
  pd_gaia_tidally_locked_desc: "这类潮汐锁定星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。其暮光区对高等生命都是极佳的生活空间。"
  pd_arcology_tidally_locked: "潮汐锁定世界（理想城）"
- pd_arcology_tidally_locked_desc: "这颗潮汐锁定星球整体都被都市与工业集群覆盖。暮光区是仅有的宜居地带。"
+ pd_arcology_tidally_locked_desc: "这颗潮汐锁定星球整体都被都市与工业集群覆盖。宜居区域都位于暮光区中。"
  pd_nuked_tidally_locked: "潮汐锁定世界（死寂）"
- pd_nuked_tidally_locked_desc: "一颗大气中充斥着氮氧元素的潮汐锁定星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。暮光区是仅有的宜居地带。"
- pd_wet_cave: "岩溶洞窟世界"
+ pd_nuked_tidally_locked_desc: "一颗大气中充斥着氮氧元素的潮汐锁定星球。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。宜居区域都位于暮光区中。"
+ pd_wet_cave: "溶洞世界（岩洞·湿润）"
  pd_wet_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
- pd_dry_cave: "砂岩洞窟世界"
+ pd_dry_cave: "砂岩洞世界（岩洞·干燥）"
  pd_dry_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
- pd_cold_cave: "冰霜洞窟世界"
+ pd_cold_cave: "冰洞世界（岩洞·寒冷）"
  pd_cold_cave_desc: "整个星球地表下都是蔓延的岩洞网络。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
  pd_gaia_cave: "岩洞世界（盖亚）"
  pd_gaia_cave_desc: "这类岩洞星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对高等生命都是极佳的生活空间。尽管地下建设成本相当高昂，这里确为殖民地提供了精良的防御。"
@@ -213,7 +213,7 @@
  pd_uncommongaia_world_desc: "这类星球是环境理想的人造世界，拥有氮氧大气层和能够自我修复的生态系统。各纬度环境对所有既存高等生命都是极佳的生活空间。"
  pc_pd_nuked_arcology: "遗落世界（死寂）"
  pc_pd_nuked_arcology_desc: "这曾是一座世界规模的巨城。目前它正处于核冬天，大气中含有乌黑浓厚的悬浮颗粒。表面辐射水平高。鲜有生命迹象。"
- pc_pd_nuked_arcology_tooltip: "宜居度：§R-100%§!\n拥有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质时，宜居度：§G+100%§!"
+ pc_pd_nuked_arcology_tooltip: "宜居性：§R-100%§!\n如有§Y$trait_pc_nuked_preference$§!或§Y$trait_survivor$§!特质，宜居性：§G+100%§!"
  pd_diamond: "金刚石世界"
  pd_diamond_desc: "这里碳元素含量极高，加上高温高压条件，该星球的大部分物质都被塑造成了金刚石。"
  pd_carbon: "碳星"
@@ -240,10 +240,10 @@
  pd_subglacial_desc: "厚厚的冰层、极低的温度与稀薄的大气使得生命无法在地表生存。然而，潮汐加热和地热活动在坚冰下塑造出一片冰下海洋。"
  pd_hothouse: "温室世界"
  pd_hothouse_desc: "这颗星球的大气圈正在经历一场严重的温室效应，对任何生命都足以致命。"
- decision_engineered_environment_gaia: "星球塑形工程"
+ decision_engineered_environment_gaia: "星球塑形师计划"
  decision_engineered_environment_gaia_desc: "我们会动用高级环境改造手段，将这颗星球塑造成一个天堂，创造出极其适宜高等生命的宜人环境。"
  engineered_environment_gaia: "完美塑形世界"
- engineered_environment_gaia_desc: "先进的环境改造技术重塑了这颗星球，这里的生态系统对高等生命而言是极佳的生存空间。"
+ engineered_environment_gaia_desc: "先进的环境改造技术重塑了这颗星球，这里的生态系统对高等生命是极佳的生存空间。"
  pd_hive_superhabitable: "$pc_pd_hive_superhabitable$"
  pd_hive_superhabitable_desc: "$pc_pd_hive_superhabitable_desc$"
  pd_hive_cave: "$pc_pd_hive_cave$"
