--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_tree_of_life_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_tree_of_life_l_simp_chinese.yml
@@ -23,18 +23,18 @@
  d_pd_tree_of_life_habitat_desc: "巨树的一根分枝，被蜂巢移植到此处。尽管生长环境适宜，此地异常的生态系统却使其无法完全成长。"
  d_pd_tree_of_life_ringworld: "生命之树环世界"
  d_pd_tree_of_life_ringworld_desc: "巨树的一根分枝，被蜂巢移植到此处。虽然能够在环世界的地表生长，但是土壤深度还需更深，方可让巨树完全伸展。"
- pc_pd_megaflora_hive: "巨植物蜂巢星球"
+ pc_pd_megaflora_hive: "巨树蜂巢星球"
  pc_pd_megaflora_hive_desc: "潮汐锁定的岩质星球，拥有氮氧大气。森林茂密，水圈强力而健康。巨树覆盖了星球地表，与栽培巨树的蜂群思维存在灵能联系，其根系也是蜂群建筑与住所的主要形式。尽管过程缓慢，但是其再生能力使其易于保护和修复。"
- trait_pc_pd_megaflora_hive_preference: "巨植物蜂巢星球偏好"
+ trait_pc_pd_megaflora_hive_preference: "巨树蜂巢星球偏好"
  trait_pc_pd_megaflora_hive_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_habitability: "巨植物蜂巢星球宜居性"
- mod_pc_pd_megaflora_hive_habitability: "巨植物蜂巢星球宜居性"
- pc_pd_megaflora_hive_bloomed: "巨植物蜂巢星球"
+ pc_pd_megaflora_hive_habitability: "巨树蜂巢星球宜居性"
+ mod_pc_pd_megaflora_hive_habitability: "巨树蜂巢星球宜居性"
+ pc_pd_megaflora_hive_bloomed: "巨树蜂巢星球"
  pc_pd_megaflora_hive_bloomed_desc: "潮汐锁定的岩质星球，拥有氮氧大气。森林茂密，水圈强力而健康。巨树覆盖了星球地表，与栽培巨树的蜂群思维存在灵能联系。"
- trait_pc_pd_megaflora_hive_bloomed_preference: "巨植物蜂巢星球偏好"
+ trait_pc_pd_megaflora_hive_bloomed_preference: "巨树蜂巢星球偏好"
  trait_pc_pd_megaflora_hive_bloomed_preference_desc:1 "$trait_pc_arctic_preference_desc$"
- pc_pd_megaflora_hive_bloomed_habitability: "巨植物蜂巢星球宜居性"
- mod_pc_pd_megaflora_hive_bloomed_habitability: "巨植物蜂巢星球宜居性"
+ pc_pd_megaflora_hive_bloomed_habitability: "巨树蜂巢星球宜居性"
+ mod_pc_pd_megaflora_hive_bloomed_habitability: "巨树蜂巢星球宜居性"
  START_SCREEN_PD_TREE_OF_LIFE: "当我们觉醒的一刻起，我们便效忠于生命之树。生命之树亦回馈于我们。我们照料它、培育它、保护它，而生命之树哺育了我们。以生命之树之名，我们遍布[GetHomeWorldName]，所到之处，我们播种并保护生命之树的枝桠。\n\n如今我们的星球已侍奉生命之树长达数个世纪，并将继续侍奉下去。当我们意识到一些潜在的危险足以摧毁整个星球时，我们担心生命之树并非处于完全的安全之中。我们早已知道这并非唯一的星球，星海中充斥着无数没有生命之树的行星，而我们渴望改变这一状况。生命之树当被续存，广为散播，生生不息。\n\n我们必须保卫生命之树。生命之树必须广为散播。生命之树必须生生不息。"
  pd_aw_tree_of_life_bloomed: "绽放的生命之树星球"
  pd_aw_tree_of_life_bloomed_desc: "该星球的巨树已经长成，树上花朵怒放。它巨大的根系为更多劳动子个体提供了空间，还能抵御相当程度的损伤。"
@@ -53,11 +53,11 @@
  decision_pd_aw_bloom_tree_of_life: "生命之树绽放"
  decision_pd_aw_bloom_tree_of_life_desc: "培育生命之树开花要花费相当多的时间和资源，但这样可以释放它的真正潜能。"
  decision_pd_aw_bloom_tree_of_life_tooltip: "此行星会成长为§Y绽放$pc_pd_megaflora_hive_bloomed$§!。\n\n每个区划提供的£pop£ §Y岗位§!和£housing£ §Y住房§!会翻倍。"
- ap_pd_tree_of_life_bloomed: "巨植物蜂巢绽放"
+ ap_pd_tree_of_life_bloomed: "巨树蜂巢绽放"
  ap_pd_tree_of_life_bloomed_desc: "我们可以培养生命巨树开花，释放它的真正潜能。"
  allow_tree_of_life_bloomed: "§H解锁决议：§!$decision_pd_aw_bloom_tree_of_life$"
  describe_tree_of_life_bloomed_worlds: "§Y绽放$pc_pd_megaflora_hive_bloomed$§!是特殊的星球类型，对非蜂巢思维人口不宜居，但可以提供没有上限的£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。所有区划的£pop£ §Y岗位§!和£housing£ §Y住房§!都会翻倍。居住在§Y绽放$pc_pd_megaflora_hive_bloomed$§!的£pop£ §Y人口§!§Y资源产出§!会提升§G+10%§!"
- holding_pd_aw_tree_of_life_sapling: "巨植物生命之芽"
+ holding_pd_aw_tree_of_life_sapling: "巨树生命之芽"
  holding_pd_aw_tree_of_life_sapling_desc: "这位宗主同他们的生命巨树已经共存许久，如今已经无法想象没有它的生活。现在，他们想要让自己的附庸们也享受同等的机遇。"
  district_pd_flora_hive: "$district_hive$"
  district_pd_flora_hive_desc: "$district_hive_plural$"
@@ -74,21 +74,21 @@
  district_pd_flora_hive_administrative: "突触区划"
  district_pd_flora_hive_administrative_desc: "用于放大蜂巢的灵能链接的突触枢纽，向宇宙延伸蜂群的意志和指引。"
  district_pd_flora_hive_administrative_plural: "突触区划"
- pc_pd_flora_hive: "巨植物冠冕星球"
+ pc_pd_flora_hive: "巨树冠冕星球"
  pc_pd_flora_hive_desc: "这一蜂巢思维与一棵巨型树木间进化出了共生关系。巨树的根底拓展至星球的每个角落，生态系统因而改变，进而适应巨树与蜂群子个体的所需。它已经成为高级思维过程的堡垒，受到居住于此的蜂群的高度保护。"
  pc_pd_flora_hive_adj: "森林"
- mod_pc_pd_flora_hive_habitability: "巨植物冠冕星球宜居性"
- trait_pc_pd_flora_hive_preference: "巨植物冠冕星球偏好"
+ mod_pc_pd_flora_hive_habitability: "巨树冠冕星球宜居性"
+ trait_pc_pd_flora_hive_preference: "巨树冠冕星球偏好"
  trait_pc_pd_flora_hive_preference_desc: "$trait_pc_arctic_preference_desc$"
- pd_aw_flora_hive_military: "巨植物冠冕星球"
- pd_aw_flora_hive_military_desc: "这个星球对巨植物蜂群思维的核心机能至关重要，因而加强了对外部威胁与干涉的防御。强大的护盾包裹着整个星球，作战子个体随时待命，确保星球卫戍。"
- decision_pd_flora_hive_crown_project: "巨植物蜂巢计划——冠冕"
+ pd_aw_flora_hive_military: "巨树冠冕星球"
+ pd_aw_flora_hive_military_desc: "这个星球对巨树蜂群思维的核心机能至关重要，因而加强了对外部威胁与干涉的防御。强大的护盾包裹着整个星球，作战子个体随时待命，确保星球卫戍。"
+ decision_pd_flora_hive_crown_project: "巨树蜂巢计划——冠冕"
  decision_pd_flora_hive_crown_project_desc: "这一蜂巢星球会被重塑为蜂群高级思维进程的堡垒。"
  decision_pd_flora_hive_crown_project_effects: "将星球改造为§Y$pc_pd_flora_hive$§!，提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!，解锁特殊的£district£ §Y理想城区划§!。作为代价，星球自然资源将变得§R无法开发§!，无法建造更多£district£ §Y发电§!、§Y采矿§!和§Y农业区划§!。"
  decision_pd_flora_hive_crown_project_effects_short: "提升£housing£ §Y$PLANET_HOUSING_TITLE$§!、§Y资源产出§!和§Y人口增长§!\n启用£district£ §Y理想城区划§!\n禁用建造£district£ §Y发电§!，§Y采矿§!以及§Y农业区划§!"
  decision_pd_megaflora_capital_building: "建造生命巨树"
  decision_pd_megaflora_capital_building_desc: "为彰显集体的卓越和影响，我们要培育一座强大的生命巨树。这一指令之树会显著提升我们在群星间的行动能力。"
- decision_pd_megaflora_capital_building_effects: "向首都巨植物星球添加§Y$d_pd_megaflora_capital_building$§!，转化未开发区划以提升政府的行政能力。"
+ decision_pd_megaflora_capital_building_effects: "向首都巨树星球添加§Y$d_pd_megaflora_capital_building$§!，转化未开发区划以提升政府的行政能力。"
  d_pd_megaflora_capital_building: "生命巨树"
  d_pd_megaflora_capital_building_desc: "这棵巨树在星球表面上格外显眼，是象征着支配的宏伟信标。这是我们集体思维的中枢，我们的星海之根由此开始延伸。"
  job_pd_tol_naval_admin_gestalt: "后勤子个体"
