--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -2,13 +2,13 @@
  sr_eludium:0 "叵得矿石"
  sr_eludium_desc:0 "这种奇特的物质有许多似乎违背物理定律的特性。唯有在这颗星球上，它才能通过影响引力来改变物体质量。"
  mod_planet_miners_sr_eludium_produces_add: "£job_miner£[GetMinerPlural]产出的£sr_eludium£$sr_eludium$"
- pd_floating: "空岛星球"
- pd_floating_desc: "这颗奇怪的星球拥有许多浮空岛屿，源于一种只在这里存在的稀有矿石。层层叠叠的空岛提供了大片生活空间。"
- pc_pd_floating: "空岛星球"
+ pd_floating: "空岛世界"
+ pd_floating_desc: "这颗奇怪的星球拥有许多浮空岛屿，源于一种只有这里存在的稀有矿石。层层叠叠的空岛提供了大片生活空间。"
+ pc_pd_floating: "空岛世界"
  pc_pd_floating_desc: "这颗奇怪的星球拥有许多浮空岛屿，源于一种只在这里存在的稀有矿石。层层叠叠的空岛提供了大片生活空间。"
  pc_pd_floating_adj: "空岛"
- mod_pc_pd_floating_habitability: "空岛星球宜居性"
- trait_pc_pd_floating_preference: "空岛星球偏好"
+ mod_pc_pd_floating_habitability: "空岛世界宜居性"
+ trait_pc_pd_floating_preference: "空岛世界偏好"
  trait_pc_pd_floating_preference_desc: "$trait_pc_arctic_preference_desc$"
  d_pd_floating_the_great_knot: "大虬结"
  d_pd_floating_the_great_knot_desc: "星罗棋布的岛屿群中，不断变换的风将古树连根拔起，形成了横亘漂浮大陆之间的天然桥梁。奇特的风系模式、多样化的局部气候，以及罕见的野生生物，使这里成为研究适应性演化和生命在动态环境中的恢复力的理想场所。"
@@ -18,6 +18,8 @@
  d_pd_floating_skyfall_islands_desc: "这是一圈环形岛屿，拥有庞大的河流和湖泊。瀑布从大地边缘倾泻而下，消失在下方的薄雾中。令人惊叹的自然风光使其成为贸易与旅游的圣地，吸引了来自星海各地的游客和商人。"
  d_pd_floating_mining_operation: "叵得开采区"
  d_pd_floating_mining_operation_desc: "该星球的生态系统曾对大规模开采作业形成阻碍。现在它已被清理完毕，可以充分开发稀有的叵得矿石。"
+ d_pd_eludium_islands: "叵得空岛"
+ d_pd_eludium_islands_desc: "该星球的岩床中蕴藏着丰富的叵得素，而诸多小型空岛中也有富集的矿床。后者很容易进行开采，可以使采矿作业对环境的影响降至最低水平。"
  decision_d_pd_the_great_knot_mining: "$d_pd_floating_the_great_knot$开发区"
  decision_d_pd_the_great_knot_mining_desc: "著名的$d_pd_floating_the_great_knot$将被开发成大型叵得素开采区。"
  decision_d_pd_whispering_glades_mining: "$d_pd_floating_whispering_glades$开发区"
@@ -26,17 +28,6 @@
  decision_d_pd_skyfall_islands_mining_desc: "著名的$d_pd_floating_skyfall_islands$将被开发成大型叵得开采区。"
  tech_eludium_research:1 "叵得精炼"
  tech_eludium_research_desc: "开采叵得素轻而易举，但要察明它的潜力和精炼工艺，就困难得多了。就像所有资源一样，要经过一些时间才能完全释放其潜力。"
- pdfloating.100.name: "天空中的岛屿"
- pdfloating.100.desc: "对§Y[From.GetName]§!进行完全扫描之后，§Y[Root.GetName]§!报告了一项引人注目的发现。由于一种名为“叵得素”的奇特矿物，该星球的陆地可以无视物理定律，漂浮在天空中。\n\n这种非凡的矿石的特性还有待进一步研究。掌控这颗星球对研究叵得素的潜力，揭开它的秘密至关重要。"
- pdfloating.100.a: "令人惊讶。"
- origin_techno_world:0 "04单元之子"
- origin_techno_world_desc:0 "origin_techno_world_desc - TODO_GATEMAN"
- origin_tooltip_techno_world_effects:0 "origin_tooltip_techno_world_effects - TODO_GATEMAN"
- START_SCREEN_TECHNO_ORIGIN:0 "START_SCREEN_TECHNO_ORIGIN - TODO_GATEMAN "
- trait_organic_fourschildren:0 "生物机械"
- trait_organic_fourschildren_desc:0 "人工智能“04单元”的造物，同时融合了有机体和人工智能，成为了真正的生物机械生命。"
- d_pd_eludium_islands: "叵得空岛"
- d_pd_eludium_islands_desc: "该星球的岩床中蕴藏着丰富的叵得素，而诸多小型空岛中也有富集的矿床。后者很容易进行开采，可以使采矿作业对环境的影响降至最低水平。"
  tech_eludium_research_tt_desc: "§H解锁：§!叵得素开采\n§H解锁：§!叵得素法令"
  edict_eludium_research:0 "叵得素研究促进"
  edict_eludium_research_desc:0 "为实验室提供精炼叵得素，可以显著提升物理学部的研究能力。"
@@ -59,13 +50,16 @@
  tech_eludium_floating_overseer_desc: "利用叵得素支撑建筑结构，可以建立浮空监察站，监视子个体的活动。"
  building_pd_eludium_floating_overseer: "浮空监察站"
  building_pd_eludium_floating_overseer_desc: "这些浮空监察站利用叵得素支撑自身结构，时刻不停地督促子个体去做它们应做的事。"
- origin_pd_floating_world:0 "天空中的岛屿"
+ pd_origin_init_floating_NAME:0 "空岛星系"
+ pd_origin_init_floating_DESC:0 "拥有空岛世界的初始星系。"
+ pdfloating.100.name: "天空之岛"
+ pdfloating.100.desc: "对§Y[From.GetName]§!进行完全扫描之后，§Y[Root.GetName]§!报告了一项引人注目的发现。由于一种名为“叵得素”的奇特矿物，该星球的陆地可以漂浮在天空中，仿佛无视物理定律一般。\n\n这种非凡矿石的特性还有待进一步研究。掌控这颗星球对研究叵得素的潜力、揭开它的秘密至关重要。"
+ pdfloating.100.a: "令人惊讶。"
+ origin_pd_floating_world:0 "天空之岛"
  origin_pd_floating_world_desc:0 "这个文明发源自一颗独一无二的星球。由于叵得素的影响，该星球的陆地都自然而然地漂浮在空中。"
- origin_tooltip_floating_world_effects:0 "—$HOMEWORLD$$TABBED_NEW_LINE$—§Y$pc_continental$§!（规模：£planetsize£20）$TABBED_NEW_LINE$—拥有['concept_pd_floating']星球修正$TABBED_NEW_LINE$—拥有两项['concept_d_pd_eludium_islands']星球特征\n—额外获得科技：$TABBED_NEW_LINE$—['concept_eludium_research', £physics_research£ $tech_eludium_research$]$TABBED_NEW_LINE$—['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$—['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$]（常规帝国）$TABBED_NEW_LINE$—['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$]（格式塔帝国）"
+ origin_tooltip_floating_world_effects:0 "—$HOMEWORLD$$TABBED_NEW_LINE$—§Y$pc_continental$§!（规模：£planetsize£20）$TABBED_NEW_LINE$—拥有['concept_pd_floating']星球修正$TABBED_NEW_LINE$—拥有两项['concept_d_pd_eludium_islands']星球特征\n—可额外获得科技：$TABBED_NEW_LINE$—['concept_eludium_research', £physics_research£ $tech_eludium_research$]$TABBED_NEW_LINE$—['concept_eludium_floating_islands', £physics_research£ $tech_eludium_floating_islands$]$TABBED_NEW_LINE$—['concept_eludium_floating_resort', £physics_research£ $tech_eludium_floating_resort$]（常规帝国）$TABBED_NEW_LINE$—['concept_eludium_floating_overseer', £physics_research£ $tech_eludium_floating_overseer$]（格式塔帝国）"
  concept_pd_floating: "$pd_floating$"
  concept_pd_floating_desc: "—$MOD_PLANET_MAX_DISTRICTS_ADD$：§G10§!\n—$mod_planet_districts_upkeep_mult$：§R25%§!\n—$mod_planet_buildings_upkeep_mult$：§R25%§!"
- pd_origin_init_floating_NAME:0 "空岛星系"
- pd_origin_init_floating_DESC:0 "包含空岛星球的初始星系"
  concept_d_pd_eludium_islands: "$d_pd_eludium_islands$"
  concept_d_pd_eludium_islands_desc: "—$mod_district_mining_max$：§G4§!\n—$planet_miners_sr_eludium_produces_add$：§G0.25§!"
  planet_miners_sr_eludium_produces_add: "£job_miner£矿工产出的£sr_eludium£$sr_eludium$"
@@ -77,3 +71,69 @@
  concept_eludium_floating_resort_desc: "$i_unlocks_building$ ['building:building_pd_eludium_floating_resort']\n\n§L$tech_eludium_floating_resort_desc$§!"
  concept_eludium_floating_overseer: "$tech_eludium_floating_overseer$"
  concept_eludium_floating_overseer_desc: "$i_unlocks_building$ ['building:building_pd_eludium_floating_overseer']\n\n§L$tech_eludium_floating_overseer_desc$§!"
+ sr_acean:0 "艾森水晶"
+ sr_acean_desc:0 "这种水晶的独特谐振能够促进有机生命的发育和再生。"
+ mod_planet_miners_sr_acean_produces_add: "由£job_miner£[GetMinerPlural]产出的£sr_acean£$sr_acean$"
+ pd_crystal: "水晶世界"
+ pd_crystal_desc: "该星球表面覆盖着高大的艾森水晶柱。水晶的独特谐振能够促进有机生命的发育和再生。"
+ pc_pd_crystal: "水晶世界"
+ pc_pd_crystal_desc: "$pd_crystal_desc$"
+ pc_pd_crystal_adj: "水晶"
+ mod_pc_pd_crystal_habitability: "水晶世界宜居性"
+ trait_pc_pd_crystal_preference: "水晶世界偏好"
+ trait_pc_pd_crystal_preference_desc: "$trait_pc_arctic_preference_desc$"
+ pdcrystal.100.name: "生命宝石"
+ pdcrystal.100.desc: "对§Y[From.GetName]§!深入扫描后，我们发现了一些不同寻常的东西：大地上散落着高耸的水晶构造。我们将之命名为§Y艾森水晶§!。这些宝石似乎能够增进附近的有机生命的健康水平；令人惊讶的是，即使在分离下来的样本中，这种效果仍然可以继续存在。\n\n§Y[Root.GetLeaderName]§!还在丛林中发现了一座哨站的痕迹。若能控制这颗星球，我们就可以对这些遗迹展开探索。"
+ pdcrystal.100.a: "真不错。"
+ pd_origin_init_crystal_NAME:0 "水晶星系"
+ pd_origin_init_crystal_DESC:0 "拥有水晶世界的初始星系。"
+ origin_pd_crystal_world:0 "水晶伴生"
+ origin_pd_crystal_world_desc:0 "该文明发源自一颗植物青翠的星球——由稀有的艾森水晶形成的高大晶柱主导着这里的环境。"
+ origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Size: £planetsize£ 25)$TABBED_NEW_LINE$- ['concept_pd_crystal'] Planet Modifier$TABBED_NEW_LINE$- TODO Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO"
+ concept_pd_crystal: "$pd_crystal$"
+ concept_pd_crystal_desc: "—$MOD_PLANET_MAX_DISTRICTS_ADD$：§G10§!\n—$mod_planet_districts_upkeep_mult$：§R25%§!\n—$mod_planet_buildings_upkeep_mult$：§R25%§!"
+ origin_techno_world:0 "04单元之子"
+ origin_techno_world_desc:0 "origin_techno_world_desc - TODO_GATEMAN"
+ origin_tooltip_techno_world_effects:0 "origin_tooltip_techno_world_effects - TODO_GATEMAN"
+ START_SCREEN_TECHNO_ORIGIN:0 "START_SCREEN_TECHNO_ORIGIN - TODO_GATEMAN "
+ trait_organic_fourschildren:0 "机械生物"
+ trait_organic_fourschildren_desc:0 "人工智能“04单元”的造物——有机生命与人工智能的融合、真正的机械生物。"
+ pd_dead_crystal: "凋零的水晶世界"
+ pd_dead_crystal_desc: "创造了艾森水晶的超个体已经死去，对生命体的积极效果也因而消失。不过，现在的水晶产量有大幅提升。"
+ pd_living_crystal: "痊愈的水晶世界"
+ pd_living_crystal_desc: "超个体已经复原，对生命体的正面效果因而有所提升。水晶开采得到了改善，但这一生物现在对任何能捕获的猎物都来者不拒。"
+ d_pd_khel_ruins: "凯尔遗址"
+ d_pd_khel_ruins_desc: "一座崩溃殖民地的遗迹，包括散落在星球部分区域内的巨型钻孔研究设施。"
+ d_pd_acean_pillars: "艾森水晶柱"
+ d_pd_acean_pillars_desc: "星球表面覆盖着高大的艾森水晶柱。它们与行星相连，会对附近的有机体造成强烈影响，能够平复情绪、促进生育。"
+ pdcrystal.200.name: "林中遗迹"
+ pdcrystal.200.desc: "自§Y[Root.GetName]§!殖民地建立伊始，我们就发现并非只有降落点附近存在遗迹。周围的荒野中还散落着好几处废弃营地，寂静无声，饱经风霜。\n\n尚不清楚这些早期居民的身份，以及后来发生的事情。"
+ pdcrystal.200.a: "我们将探索这些遗迹。"
+ pdcrystal.300.name: "行星的命运"
+ pdcrystal.300.desc: "现在，我们知晓了凯尔人的命运，以及艾森水晶不光彩的秘密。我们有三个选择：对超个体不管不顾，将其杀死，或使之恢复本来的状态。\n\n杀死这个生物会提升水晶的产量，但会终止其对有机生命的影响。治愈可以增强它对生命体的影响，却会增加殖民者遇难的风险；不过安全措施应该可以缓解这种风险。"
+ pdcrystal.300.a: "让它变得驽钝是有理由的。"
+ pdcrystal.300.a.tooltip: "我们不会对这一超个体采取措施，接触该星球的方式不会有任何改变。"
+ pdcrystal.300.b: "结束这家伙的生命。"
+ pdcrystal.300.b.tooltip: "我们会完成凯尔人开了头的事情，杀死这一超个体。这会结束该星球对有机生命的影响，但可以显著提升艾森水晶矿的产量。"
+ pdcrystal.300.c: "应该消除这种不合理的罪行。"
+ pdcrystal.300.c.tooltip: "消除凯尔人的“脑叶切除术”会治愈这一超个体，强化其对生命体的影响，并小幅提升艾森水晶的产量。但它也会捕食包括殖民者在内的各类活物。"
+ pdcrystal_site: "杂草丛生的遗迹"
+ pdcrystal_site_desc: "该星球的一片区域内分布着诸多被遗弃的废墟。彻底的调查有助于我们了解这里独有的艾森水晶矿，以及它们对有机体发育的非凡影响。"
+ pdcrystal.250.name: "凯尔遗址"
+ pdcrystal.250.desc: "废弃的基地及其中的设备基本都埋没在丛林中，但我们还是发现了一些有用的信息。一支名为凯尔人的外来者曾在这里开展星球规模的深层地壳钻研实验。\n\n尽管大多数数据都已损坏，但我们获得的线索表明，研究站附近还有一个有待发掘的凯尔定居点。"
+ pdcrystal.250.a: "有趣。"
+ pdcrystal.251.desc: "在定居点，我们发现了一艘没有超空间技术的世代飞船的残骸。为了逃离母星的气候灾害，凯尔人代代流浪，跨越了多个星系。他们最终发现了这颗似乎完美符合要求的星球，并开始建立新的家园。\n\n我们将继续查阅凯尔人的记录。"
+ ancrel.251.a: "他们还真是走运。"
+ pdcrystal.252.desc: "殖民地经历了好几年的蓬勃发展，这要得益于水晶柱对移载作物的促进。但后来开始出现殖民者失踪现象。起初，这似乎只是随机事件，然而失踪速度越来越快。对失踪事件展开调查后，他们的首席科学官发现了惊人的事实：这个星球是个会捕食他们的活物。由于无法再次启动飞船，他们便专心于与星球沟通并使之安抚。\n\n下一步，我们将开始调查其中一处钻孔的所在地。"
+ pdcrystal.252.a: "殖民地有危险？"
+ pdcrystal.253.desc: "研究表明，这种水晶是一种拥有原始智能的岩石超个体，会利用艾森水晶将动物引诱到隐蔽的地洞中。凯尔人钻出了孔洞，利用电磁脉冲在保留水晶特性的同时扰乱其捕食行为。\n\n我们还找到了钻探项目的控制中心。"
+ pdcrystal.253.a: "他们肯定非常绝望。"
+ pdcrystal.254.desc: "凯尔人的钻孔只是加速了星球的捕食，或许这是一种防御机制。当他们准备启动武器时，活着的凯尔人只剩十多个了。武器发动后，星球释放出巨大的能量，凯尔人的所有记录都戛然而止。\n\n尽管凯尔人没能活着看到这一切，但他们做对了：星球已经失去了捕食活物的能力。这就是艾森水晶力量的可怕来源。"
+ pdcrystal.254.a: "所有人的结局都何其悲惨。"
+ tech_acean_research: "艾森水晶加工"
+ tech_acean_research_desc: "让艾森晶体在收获后仍能保持强效，要做到这一点绝非易事。需要一些时间才能研究透彻。"
+ tech_acean_research_tt_desc: "§H解锁：§!艾森水晶开采\n§H解锁：§!艾森水晶法令"
+ edict_acean_pop_growth: "艾森水晶都市设施"
+ edict_acean_pop_growth_desc: "将艾森水晶整合进城市基础设施中，可以提升人们的幸福感。街道空间都要专门设计，使艾森水晶对生理与情绪健康的影响达到最大化。"
+ edict_acean_shield_resonance: "艾森水晶护盾谐振"
+ edict_acean_shield_resonance_desc: "艾森水晶的独特谐振频率可以用在护盾发生器中，这能大幅提升护盾的强度和再生水平。"
