--- a/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
+++ b/planetary_diversity_ascension_worlds/localisation/simp_chinese/planetarydiversity_aw_superprojects_l_simp_chinese.yml
@@ -18,16 +18,16 @@
  pc_pd_agriworld: "农耕星"
  pc_pd_agriworld_desc: "这颗岩石星球上尽是无穷无尽的工业化农场，严重依赖强效肥料、复合气象控制和先进灌溉系统。虽然它维持着无穷无尽的出产，却已经取代星球本来的生态系统。"
  pc_pd_agriworld_adj: "农业"
- mod_pc_pd_agriworld_habitability: "农耕世界宜居性"
- trait_pc_pd_agriworld_preference: "农耕世界偏好"
+ mod_pc_pd_agriworld_habitability: "农耕星宜居性"
+ trait_pc_pd_agriworld_preference: "农耕星偏好"
  trait_pc_pd_agriworld_preference_desc: "$trait_pc_arctic_preference_desc$"
  decision_pd_aw_agriworld: "行星超级工程：农耕星"
- decision_pd_aw_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
+ decision_pd_aw_agriworld_desc: "通过将星球改造为农耕星，我们会建立起广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
  decision_pd_agriworld_requirements: "£trigger_no£ §R不能有§Y$district_farming_plural$§!以外的其它区划§!"
  pd_aw_agriworld: "农耕星"
  pd_aw_agriworld_desc: "这颗岩石星球的工业化农场，严重依赖强效肥料、复合气象控制和先进灌溉系统。"
  tech_pd_planetary_agriworld: "行星超级工程：农耕星"
- tech_pd_planetary_agriworld_desc: "将星球改造为农耕世界，我们将建立广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
+ tech_pd_planetary_agriworld_desc: "通过将星球改造为农耕星，我们会建立起广阔的工业化农场，用丰饶的人造农业园地取代自然生态。"
  tech_pd_planetary_agriworld_tooltip: "§H解锁决议：§!$decision_pd_aw_agriworld$"
  pc_pd_stripmine: "采掘星"
  pc_pd_stripmine_desc: "这颗星球现在是一片广阔的露天深地矿场，迷宫般复杂的工业挖掘机和钻机在星球表面纵横交错。在对资源的不竭追求中，自然生态已被破坏。"
