--- a/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
+++ b/planetary_diversity_uniques/localisation/simp_chinese/pd_uniques_l_simp_chinese.yml
@@ -87,12 +87,12 @@
  pdcrystal.100.a: "真不错。"
  pd_origin_init_crystal_NAME:0 "水晶星系"
  pd_origin_init_crystal_DESC:0 "拥有水晶世界的初始星系。"
- origin_pd_crystal_world:0 "水晶伴生"
+ origin_pd_crystal_world:0 "生于水晶"
  origin_pd_crystal_world_desc:0 "该文明发源自一颗植物青翠的星球——由稀有的艾森水晶形成的高大晶柱主导着这里的环境。"
  origin_tooltip_crystal_world_effects:0 "- $HOMEWORLD$$TABBED_NEW_LINE$- §Y$pc_tropical$§! (Size: £planetsize£ 25)$TABBED_NEW_LINE$- ['concept_pd_crystal'] Planet Modifier$TABBED_NEW_LINE$- TODO Planetary Features\n- Access To Additional Technologies:$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO$TABBED_NEW_LINE$- TODO"
  concept_pd_crystal: "$pd_crystal$"
  concept_pd_crystal_desc: "—$MOD_PLANET_MAX_DISTRICTS_ADD$：§G10§!\n—$mod_planet_districts_upkeep_mult$：§R25%§!\n—$mod_planet_buildings_upkeep_mult$：§R25%§!"
- origin_techno_world:0 "04单元之子"
+ origin_techno_world:0 "04单元的子裔"
  origin_techno_world_desc:0 "origin_techno_world_desc - TODO_GATEMAN"
  origin_tooltip_techno_world_effects:0 "origin_tooltip_techno_world_effects - TODO_GATEMAN"
  START_SCREEN_TECHNO_ORIGIN:0 "START_SCREEN_TECHNO_ORIGIN - TODO_GATEMAN "
